Formatted header and footer.

--- a/index.html
+++ b/index.html
@@ -10,53 +10,53 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Space Football League</h1>
-        <!-- insert image here later -->
-        <ul>
-            <li><a href="#">The What?!</a></li>
-            <li><a href="#">Sign In</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
-    <div class="container">
-        <div class="welcome">
-            <p>Space Football League is an interstellar phenomenon!</p>
-            <p>A new beginning for space football lovers. This is a revolutionary concept that will bring together
-                interstellar inhabitants.</p>
-            <p><a href="#">ENTER HERE NOW!</p></a>
-            <img src="space_helmet.jpg" alt="space helmet" width="100" height="100">
-        </div>
-
-        <div class="boxes">
-            <div class="text">
-                <h2>Useful Links</h2>
+    <div class="webpage">
+        <div class="header">
+            <h1>Space Football League</h1>
+            <!-- insert image here later -->
+            <div class="menu">
+                <ul class="menu">
+                    <li><a class="top-links" href="#">The What?!</a></li>
+                    <li><a class="top-links" href="#">Sign In</a></li>
+                    <li><a class="top-links" href="#">Contact</a></li>
+                </ul>
             </div>
-            <ul>
-                <li><a href="#">Highlights</a></li>
-                <li><a href="#">Team Profiles</a></li>
-                <li><a href="#">League Standings</a></li>
-                <li><a href="#">Interstellar Fair Play Rules</a></li>
-            </ul>
         </div>
-
-        <div class="message">
-            "The Space Football League(SFL) is a bold endeavour that aspires to bring together insterstellar
-            inhabitants. It celebrates our differences through a common sports. Hopefully, this league will bring long
-            lasting peace among the interstellar planets."
+        <div class="container">
+            <div class="welcome">
+                <p>Space Football League is an interstellar phenomenon!</p>
+                <p>A new beginning for space football lovers. This is a revolutionary concept that will bring together
+                    interstellar inhabitants.</p>
+                <p><a href="#">ENTER HERE NOW!</p></a>
+                <img src="space_helmet.jpg" alt="space helmet" width="400" height="300">
+            </div>
+            <div class="boxes">
+                <div class="text">
+                    <h2>Useful Links</h2>
+                </div>
+                <ul>
+                    <li><a href="#">Highlights</a></li>
+                    <li><a href="#">Team Profiles</a></li>
+                    <li><a href="#">League Standings</a></li>
+                    <li><a href="#">Interstellar Fair Play Rules</a></li>
+                </ul>
+            </div>
+            <div class="message">
+                "The Space Football League(SFL) is a bold endeavour that aspires to bring together insterstellar
+                inhabitants. It celebrates our differences through a common sports. Hopefully, this league will bring
+                long
+                lasting peace among the interstellar planets."
+            </div>
+            <div class="signup">
+                Enter your team here!
+                Sign up NOW for SFL and win $100T!! Limited Entries.
+                <a href="#">ENTER HERE</a>
+            </div>
         </div>
-        <div class="signup">
-            Enter your team here!
-            Sign up NOW for SFL and win $100T!! Limited Entries.
-            <a href="#">ENTER HERE</a>
+        <div class="footer">
+            Copyright&#169 SFL 2022.
         </div>
     </div>
-
-    <div class="footer">
-        Copyright&#169 SFL 2022.
-    </div>
-
-
 </body>
 
 </html>
