Formatted the section right below the main header. Changed the button style to bevel at the edges. Changed background color and font color to match style

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
             </div>
         </div>
         <div class="container">
-            <div class="welcome">
-                <p>Space Football League is an interstellar phenomenon!</p>
-                <p>A new beginning for space football lovers. This is a revolutionary concept that will bring together
-                    interstellar inhabitants.</p>
-                <p><a href="#">ENTER HERE NOW!</p></a>
-                <img src="space_helmet.jpg" alt="space helmet" width="400" height="300">
+            <div class="section">
+                <div class="welcome">
+                    <h2 class="top">Space Football League is an interstellar phenomenon!</h2>
+                    <p>A new beginning for space football lovers. This is a revolutionary concept that will
+                        bring together
+                        interstellar inhabitants.</p>
+                    <button><a class="enter-button" href="#">ENTER HERE NOW!</button></a>
+                </div>
+                <img src="space_helmet.jpg" alt="space helmet" width="500" height="300">
             </div>
             <div class="boxes">
                 <div class="text">
@@ -50,7 +53,7 @@
             <div class="signup">
                 Enter your team here!
                 Sign up NOW for SFL and win $100T!! Limited Entries.
-                <a href="#">ENTER HERE</a>
+                <button><a href="#">WHERE DO I SIGN-UP?</a></button>
             </div>
         </div>
         <div class="footer">
