Formatted middle section using CSS-style. Added images. Changed color palette of the webpage from grey to blue. Formatted button to match color of the webpage.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="section">
+            <div class="top-section">
                 <div class="welcome">
                     <h2 class="top">Space Football League is an interstellar phenomenon!</h2>
                     <p>A new beginning for space football lovers. This is a revolutionary concept that will
@@ -31,17 +31,24 @@
                         interstellar inhabitants.</p>
                     <button><a class="enter-button" href="#">ENTER HERE NOW!</button></a>
                 </div>
-                <img src="space_helmet.jpg" alt="space helmet" width="500" height="300">
+                <img class="helmet" src="space_helmet.jpg" alt="space helmet" width="500" height="300">
             </div>
-            <div class="boxes">
+            <div class="central-section">
                 <div class="text">
-                    <h2>Useful Links</h2>
+                    Useful Links
                 </div>
-                <ul>
-                    <li><a href="#">Highlights</a></li>
-                    <li><a href="#">Team Profiles</a></li>
-                    <li><a href="#">League Standings</a></li>
-                    <li><a href="#">Interstellar Fair Play Rules</a></li>
+                <ul class="box">
+                    <li><a class="subtext" href="#"><img class="square" src="box.png" alt="box-link" width="100"
+                                height="100">Highlights</a></li>
+                    <li><a class="subtext" href="#"><img class="square" src="box.png" alt="box-link" width="100"
+                                height="100">Team
+                            Profiles</a></li>
+                    <li><a class="subtext" href="#"><img class="square" src="box.png" alt="box-link" width="100"
+                                height="100">League
+                            Standings</a></li>
+                    <li><a class="subtext" href="#"><img class="square" src="box.png" alt="box-link" width="100"
+                                height="100">Interstellar Fair Play
+                            Rules</a></li>
                 </ul>
             </div>
             <div class="message">
