Formatted the message section. Formatted the top button.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 inhabitants. It celebrates our differences through a common sports. Hopefully, this league will bring
                 long
                 lasting peace among the interstellar planets."
+                &NonBreakingSpace;
+                &NonBreakingSpace;
+                <p class="name">SFL President, Godger Rudell.</p>
+
             </div>
             <div class="signup">
                 Enter your team here!
