Formatted bottom section  using flexbox.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <div class="top-section">
                 <div class="welcome">
                     <h2 class="top">Space Football League is an interstellar phenomenon!</h2>
-                    <p>A new beginning for space football lovers. This is a revolutionary concept that will
+                    <p class="top-text">A new beginning for space football lovers. This is a revolutionary concept that
+                        will
                         bring together
                         interstellar inhabitants.</p>
                     <button><a class="enter-button" href="#">ENTER HERE NOW!</button></a>
@@ -62,9 +63,13 @@
 
             </div>
             <div class="signup">
-                Enter your team here!
-                Sign up NOW for SFL and win $100T!! Limited Entries.
-                <button><a href="#">WHERE DO I SIGN-UP?</a></button>
+                <div>
+                    <h3 class="bottom"> Enter your team here!</h3>
+                    <p class="bottom">Sign up NOW for SFL and win $100T!! Limited Entries.</p>
+                </div>
+                <div>
+                    <button class="bottom"><a class="bottom" href="#">WHERE DO I SIGN-UP?</a></button>
+                </div>
             </div>
         </div>
         <div class="footer">
