Changed code in <div>  container such as to be responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                         interstellar inhabitants.</p>
                     <button><a class="enter-button" href="#">ENTER HERE NOW!</button></a>
                 </div>
-                <img class="helmet" src="space_helmet.jpg" alt="space helmet" width="500" height="300">
+                <div class="helmet">
+                    <img src="space_helmet.jpg" alt="space helmet" width="500" height="300">
+                </div>
             </div>
             <div class="central-section">
                 <div class="text">
@@ -54,11 +56,10 @@
             </div>
             <div class="message">
                 "The Space Football League(SFL) is a bold endeavour that aspires to bring together insterstellar
-                inhabitants. It celebrates our differences through a common sports. Hopefully, this league will bring
+                inhabitants. It celebrates our differences through a common sports. Hopefully, this league will
+                bring
                 long
                 lasting peace among the interstellar planets."
-                &NonBreakingSpace;
-                &NonBreakingSpace;
                 <p class="name">SFL President, Godger Rudell.</p>
 
             </div>
